--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
 
 .navbar {
   background: rgb(43, 44, 44);
-  height: 80px;
+  height: 5rem;
   width: 100%;
   padding: 1rem 2rem;
   display: flex;
@@ -15,7 +15,7 @@
 }
 
 .navbar-logo {
-  width: 230px;
+  width: 14.375rem;
   color: #fff;
   justify-self: start;
   cursor: pointer;
@@ -42,7 +42,7 @@
 .nav-item {
   display: flex;
   align-items: center;
-  height: 80px;
+  height: 5rem;
 }
 
 .nav-links {
@@ -71,7 +71,7 @@
 
 @media screen and (max-width: 960px) {
   .navbar {
-    min-width: 380px;
+    min-width: 23.75rem;
   }
 
   .nav-menu {
@@ -80,7 +80,7 @@
     width: 100%;
     height: calc(100% - 80px);
     position: absolute;
-    top: 80px;
+    top: 5rem;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
